fix: Arreglamos scrollbar de la pagina

--- a/frontend/src/styles/Auth.scss
+++ b/frontend/src/styles/Auth.scss
@@ -3,7 +3,11 @@ $border: rgb(67, 135, 224);
 @mixin border () {
     border-color:$border;
 }
-
+.signup {
+    max-height: 900px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+}
 #signup, #login {
     @include border();
     
