--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -3,8 +3,6 @@
     margin: 0;
     padding: 0;
     height: 100vh;
-    overflow: hidden;
-
     
     &::before {
         content: ""; // Necesario para que ::before funcione
